updated the lists sorted by date

--- a/views/UpdateCreditSale.pug
+++ b/views/UpdateCreditSale.pug
@@ -65,3 +65,5 @@ html
           input#salesAgentName(type='text', name='salesAgentName', value=creditSale.salesAgentName, placeholder='Enter sales agent name')
 
       button(type='submit') Update Credit Sale
+
+    script(src='/js/UpdateCreditSale.js')
