--- a/views/procurementlist.pug
+++ b/views/procurementlist.pug
@@ -4,35 +4,40 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title Procurement List
-    link(rel="stylesheet" href="/bootstrap-5.0.2-dist/css/bootstrap.min.css")
+    link(rel='preconnect' href='https://fonts.googleapis.com')
+    link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
+    link(href='https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap' rel='stylesheet')
     link(rel="stylesheet" href="/css/procurementlist.css")
     link(rel="stylesheet" href="/css/deleteModal.css")
 
   body
-    // Header Section
-    header.bg-dark.text-light.py-3
-      .container.text-center
-        h1 Procurement List
-        nav.mt-3
-          a.navbar-brand(href="/managerDash") Manager Dashboard
-          a.navbar-brand(href="/directorsDash", style="margin-left: 20px") Directors Dashboard
+    // Top Navigation Bar
+    nav.navbar
+      .nav-container 
+        span.project-name Karibu Groceries Limited
 
-    // Main Content Section
-    main.container.mt-4
-      // Procurement Table
-      table#procurement-table.table.table-striped.table-hover
+        .nav-links
+          a.nav-link(href='/ManagerDashboard') Dashboard
+          a.nav-link(href='/addprocurement') Add Procurement
+          a.nav-link(href='/stockList') Stock List
+          a.nav-link(href='/logout') Logout
+
+    .container
+      h2 Procurement List
+
+      table
         thead
           tr
-            th(scope="col") Produce Name
-            th(scope="col") Produce Type
-            th(scope="col") Tonnage (kg)
-            th(scope="col") Cost (UGX)
-            th(scope="col") Dealer Name
-            th(scope="col") Branch Name
-            th(scope="col") Contact
-            th(scope="col") Date
-            th(scope="col") Time
-            th(scope="col") Action
+            th Produce Name
+            th Type
+            th Tonnage (kg)
+            th Cost (UGX)
+            th Dealer Name
+            th Branch
+            th Contact
+            th Date
+            th Time
+            th Actions
 
         tbody
           if procurements && procurements.length > 0
@@ -41,29 +46,26 @@ html(lang="en")
                 td= procurement.produceName
                 td= procurement.produceType
                 td= procurement.tonnage
-                td= procurement.cost
+                td= procurement.cost ? procurement.cost.toLocaleString() : '0'
                 td= procurement.dealerName
                 td= procurement.branchName 
                 td= procurement.contact
                 td= procurement.date
                 td= procurement.time
                 td
-                  a.update-btn(href="/UpdateProduceProcurement/" + procurement._id) Update
+                  a.btn.btn-primary.update-btn(href="/UpdateProduceProcurement/" + procurement._id) Update
                   form(method="POST", action="/delete-procurement", style="display:inline;" onsubmit="return showDeleteConfirmation('Are you sure you want to delete this procurement?', '#{procurement.produceName}', this)")
                     input(type="hidden", name="id", value=procurement._id)
-                    button.delete-btn(type="submit") Delete
+                    button.btn.btn-danger.delete-btn(type="submit") Delete
           else
             tr
-              td(colspan="10").text-center No procurement records available
+              td(colspan="10").no-data No procurement records available
 
-      // Add Procurement Button
-      .text-center.mt-4
-        a.add-procurement-btn(href="/addprocurement") Add Procurement
+      .add-button-container
+        button.btn.btn-success.add-btn(onclick="window.location.href='/addprocurement'") Add Procurement
 
-    // Footer Section
-    footer.bg-dark.text-light.py-3.mt-5
-      .container.text-center
-        p.mb-0 © #{year} Procurement System by Komuntale Elizabeth. All rights reserved.
+    footer
+      | &copy; #{year} Karibu Grocery Limited. All rights reserved.
 
     script(src="/js/deleteModal.js")
 
